# brother-label

./: pyproject.toml
brother_label/: __main__.py  cli.py  cli_new.py  converter.py  devices.py  engine.py  exceptions.py  ghostscript.py  gui.py  labels.py  models.py  raster.py  reader.py  spool.py  utils.py
brother_label/backends/: __init__.py  base.py  file.py  generic.py  linux.py  linux_kernel.py  network.py  pyusb.py
brother_label/renderers/: __init__.py  base.py  bitmap.py  ghostscript.py  text.py
tests/: test_reader.py
